--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "start:watch": "nodemon -w ./scripts --exec yarn start",
     "start:built": "node dist/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "abs-80s": "babel-node scripts/scrapers/absolute80sScraper.js"
+    "abs-80": "babel-node scripts/scrapers/absolute80sScraper.js"
   },
   "license": "ISC",
   "dependencies": {
+    "firebase-admin": "^5.0.0",
     "lodash": "^4.2.1",
     "scraperjs": "^1.2.0"
   },
